<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/get_started"
    tools:context=".GetStarted">

    <Button
        android:id="@+id/get_button"
        android:layout_width="248dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/playfairdisplay_regular"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="311dp"
        android:layout_height="78dp"
        android:layout_above="@+id/get_button"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="19dp"
        android:fontFamily="@font/playfairdisplay_regular"
        android:textStyle="bold"
        android:padding="5dp"
        android:text="@string/increase_your_productivity_with_our_cool_features"
        android:textColor="@color/gray"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/info_text"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/playfairdisplay_extrabold"
        android:text="@string/welcome_to_studyeasy"
        android:textColor="@color/purple"
        android:textSize="25dp"
        android:textStyle="bold"

        />


</RelativeLayout>